# solace

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: ci.yml
backend/: config.py  database.py  main.py
backend/api/: __init__.py  deps.py
backend/api/routes/: alerts.py  auth.py  health.py  incidents.py  notifications.py  oncall.py  runbooks.py  settings.py  silences.py  stats.py  users.py  webhooks.py  ws.py
backend/core/: __init__.py  correlation.py  dedup.py  fingerprint.py  notifications.py  oncall.py  security.py  silence.py
backend/integrations/: __init__.py  datadog.py  email_ingest.py  grafana.py  prometheus.py  splunk.py
backend/migrations/: env.py
backend/migrations/versions/: a1b2c3d4e5f6_add_silence_windows.py  b2c3d4e5f6a7_add_notifications.py  c3d4e5f6a7b8_add_tags_and_notes.py  d4e5f6a7b8c9_add_features_v2.py  e5f6a7b8c9d0_fix_enum_casing.py  fd4ed7782332_initial_schema.py  (+5 more)
backend/models/: __init__.py  oncall.py  runbook.py
backend/schemas/: __init__.py
backend/services/: __init__.py  oncall.py  runbook.py  users.py
docs/: DOCUMENTATION.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css
scripts/email_forwarder/: Dockerfile  README.md  forwarder.py  solace-email-forwarder.service
tests/: conftest.py  test_api_integration.py  test_core.py  test_datadog.py  test_email_forwarder.py  test_email_ingest.py  test_grafana.py  test_notifications.py  test_oncall.py  test_prometheus.py  test_runbook_rules.py  test_silence.py  test_splunk.py
(+38 files in other folders)
